--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="page clearfix" index>
     <div class="left">
         <h1>欢迎来到德莱联盟！</h1>
-        <small>有趣的灵魂万里挑一</small>
+        <small>有趣的灵魂万里挑一 好看的皮囊你要不起</small>
         <hr>
         <ul>
             {% for post in paginator.posts %}
